# stwo-circuits

./: .gitattributes  .gitignore  1.txt  AGENTS.md  CLAUDE.md  Cargo.toml  DEBUG_TEST_DIFFERENCES.md  _typos.toml  rustfmt.toml
circuit_gui/: .gitignore  Cargo.toml  DESIGN.md  README.md
circuit_gui/src/: catalog.rs  const_registry.rs  export.rs  main.rs  menu.rs  model.rs
circuit_gui/viewer/: app.js  drive.mjs  index.html  style.css
crates/cairo_air/: Cargo.toml
crates/cairo_air/src/: all_components.rs  component_utils.rs  lib.rs  mod.rs  multiple_inputs_test.rs  preprocessed_columns.rs  preprocessed_columns_test.rs  privacy.rs  privacy_program.rs  privacy_test.rs  privacy_test_utils.rs  relations.rs  sample_evaluations.rs  statement.rs  statement_test.rs  test.rs  utils.rs  verify.rs
crates/cairo_air/src/components/: add_ap_opcode.rs  add_mod_builtin.rs  add_opcode.rs  add_opcode_small.rs  assert_eq_opcode.rs  assert_eq_opcode_double_deref.rs  assert_eq_opcode_imm.rs  bitwise_builtin.rs  blake_compress_opcode.rs  blake_g.rs  blake_round.rs  blake_round_sigma.rs  call_opcode_abs.rs  call_opcode_rel_imm.rs  cube_252.rs  ec_op_builtin.rs  generic_opcode.rs  jnz_opcode_non_taken.rs  jnz_opcode_taken.rs  jump_opcode_abs.rs  jump_opcode_double_deref.rs  jump_opcode_rel.rs  jump_opcode_rel_imm.rs  memory_address_to_id.rs  memory_id_to_big.rs  memory_id_to_small.rs  mul_mod_builtin.rs  mul_opcode.rs  mul_opcode_small.rs  partial_ec_mul_generic.rs  partial_ec_mul_window_bits_18.rs  partial_ec_mul_window_bits_9.rs  pedersen_aggregator_window_bits_18.rs  pedersen_aggregator_window_bits_9.rs  pedersen_builtin.rs  pedersen_builtin_narrow_windows.rs  pedersen_points_table_window_bits_18.rs  pedersen_points_table_window_bits_9.rs  poseidon_3_partial_rounds_chain.rs  poseidon_aggregator.rs  (+29 more)
crates/cairo_verifier/: Cargo.toml
crates/cairo_verifier/src/: all_components.rs  circuit_analysis.rs  lib.rs  preprocessed_columns.rs  preprocessed_columns_test.rs  privacy.rs  privacy_test.rs  sample_evaluations.rs  statement.rs  statement_test.rs  test.rs  utils.rs  verify.rs  verify_test.rs
crates/cairo_verifier/src/components/: add_ap_opcode.rs  add_mod_builtin.rs  add_opcode.rs  add_opcode_small.rs  assert_eq_opcode.rs  assert_eq_opcode_double_deref.rs  assert_eq_opcode_imm.rs  bitwise_builtin.rs  blake_compress_opcode.rs  blake_g.rs  blake_round.rs  blake_round_sigma.rs  call_opcode_abs.rs  call_opcode_rel_imm.rs  cube_252.rs  ec_op_builtin.rs  generic_opcode.rs  jnz_opcode_non_taken.rs  jnz_opcode_taken.rs  jump_opcode_abs.rs  jump_opcode_double_deref.rs  jump_opcode_rel.rs  jump_opcode_rel_imm.rs  memory_address_to_id.rs  memory_id_to_big.rs  memory_id_to_small.rs  mul_mod_builtin.rs  mul_opcode.rs  mul_opcode_small.rs  partial_ec_mul_generic.rs  partial_ec_mul_window_bits_18.rs  partial_ec_mul_window_bits_9.rs  pedersen_aggregator_window_bits_18.rs  pedersen_aggregator_window_bits_9.rs  pedersen_builtin.rs  pedersen_builtin_narrow_windows.rs  pedersen_points_table_window_bits_18.rs  pedersen_points_table_window_bits_9.rs  poseidon_3_partial_rounds_chain.rs  poseidon_aggregator.rs  (+29 more)
crates/circuit_air/: Cargo.toml
crates/circuit_air/src/: blake2s_consts.rs  circuit_claim.rs  circuit_components.rs  component_utils.rs  lib.rs  mod.rs  preprocessed_columns.rs  relations.rs  sample_evaluations.rs  statement.rs  verify.rs
crates/circuit_air/src/circuit_eval_components/: blake_g.rs  blake_g_gate.rs  blake_gate.rs  blake_output.rs  blake_round.rs  blake_round_sigma.rs  m_31_to_u_32.rs  mod.rs  prelude.rs  range_check_15.rs  range_check_16.rs  triple_xor.rs  triple_xor_32.rs  verify_bitwise_xor_12.rs  verify_bitwise_xor_4.rs  verify_bitwise_xor_7.rs  verify_bitwise_xor_8.rs  verify_bitwise_xor_9.rs
crates/circuit_air/src/components/: add_mul_gate.rs  blake_g.rs  (+19 more)
crates/circuit_cairo_serialize/: Cargo.toml
crates/circuit_cairo_serialize/src/: claim.rs  config.rs  lib.rs  proof.rs  test.rs
crates/circuit_common/: Cargo.toml
crates/circuit_common/src/: component_utils.rs  finalize.rs  finalize_constants.rs  lib.rs  order_hash_map.rs  outputs.rs  preprocessed.rs  preprocessed_test.rs
crates/circuit_multiverifier/: Cargo.toml
crates/circuit_multiverifier/src/: backward_compatability_test.rs  backward_compatibility_test.rs  cairo_subcircuit.rs  lib.rs  multi_cairo_test.rs  multi_fibonacci_test.rs  padding.rs  statement.rs  test_utils.rs  verify.rs  verify_test.rs
crates/circuit_prover/: Cargo.toml
crates/circuit_prover/src/: circuit_hash.rs  finalize.rs  lib.rs  merkle_channel.rs  prover.rs  prover_test.rs  test_utils.rs
crates/circuit_serialize/: Cargo.toml
crates/circuit_serialize/src/: deserialize.rs  serialize.rs  test.rs
crates/circuit_verifier/: Cargo.toml
crates/circuit_verifier/src/: blake2s_consts.rs  circuit_claim.rs  circuit_components.rs  circuit_hash.rs  circuit_hash_test.rs  circuit_proof.rs  lib.rs  relations.rs  sample_evaluations.rs  statement.rs  verify.rs
crates/circuits/: Cargo.toml
crates/circuits/src/: blake.rs  blake_test.rs  circuit.rs  circuit_test.rs  context.rs  context_test.rs  extract_bits.rs  extract_bits_test.rs  finalize_constants.rs  finalize_constants_test.rs  ivalue.rs  ivalue_test.rs  lib.rs  ops.rs  ops_test.rs  scopes.rs  simd.rs  simd_test.rs  stats.rs  test_utils.rs  utils.rs  wrappers.rs  wrappers_test.rs
crates/stark_verifier/: Cargo.toml
crates/stark_verifier/src/: channel.rs  channel_test.rs  circle.rs  circle_test.rs  constraint_eval.rs  empty_component.rs  errors.rs  fri.rs  fri_proof.rs  fri_test.rs  lib.rs  logup.rs  merkle.rs  merkle_channel.rs  merkle_test.rs  oods.rs  oods_test.rs  order_hash_map.rs  proof.rs  proof_from_stark_proof.rs  select_queries.rs  select_queries_test.rs  sort_queries.rs  sort_queries_test.rs  statement.rs  test_utils.rs  verify.rs  verify_test.rs
crates/stark_verifier_examples/: Cargo.toml
crates/stark_verifier_examples/src/: fri_test.rs  lib.rs  simple_air.rs  simple_air_test.rs  simple_statement.rs  verify_test.rs
crates/stwo-circuits/: Cargo.toml
crates/stwo-circuits/src/: lib.rs
(+672 files in other folders)
