[workspace]
members = [
    "crates/cairo_verifier",
    "crates/circuits",
    "crates/circuit_verifier",
    "crates/circuit_common",
    "crates/circuit_serialize",
    "crates/circuit_prover",
    "crates/stark_verifier",
    "crates/stark_verifier_examples", "crates/circuit_multiverifier",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
blake2 = { version = "0.10.6", default-features = false }
hashbrown = ">=0.15.2"
indexmap = { version = "2.10.0", default-features = false, features = ["std"] }
indoc = "2.0.6"
itertools = { version = "0.12", default-features = false, features = [
    "use_alloc",
] }
num-traits = { version = "0.2.19", default-features = false }
rstest = "0.26.1"
expect-test = "1.5.1"
rayon = "1.10.0"
rand_chacha = "0.3"
rand_core = "0.6"
serde = "1.0.219"
serde_json = "1.0"

# stwo
stwo = { version = "2.2.0", features = [
    "parallel",
], default-features = false }
stwo-constraint-framework = { version = "2.2.0", features = [
    "parallel",
] }
stwo-air-utils-derive = { version = "2.2.0" }
stwo-air-utils = { version = "2.2.0" }

# stwo-cairo
cairo-air = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "0a5e70b7" }
stwo_cairo_prover = { package = "stwo-cairo-prover", git = "https://github.com/starkware-libs/stwo-cairo", rev = "0a5e70b7" }
stwo_cairo_common = { package = "stwo-cairo-common", git = "https://github.com/starkware-libs/stwo-cairo", rev = "0a5e70b7" }
stwo_cairo_dev_utils = { package = "stwo-cairo-dev-utils", git = "https://github.com/starkware-libs/stwo-cairo", rev = "0a5e70b7" }
stwo_cairo_utils = { package = "stwo-cairo-utils", git = "https://github.com/starkware-libs/stwo-cairo", rev = "0a5e70b7" }

# local crates
circuits = { path = "crates/circuits"}
circuit-verifier = { path = "crates/circuit_verifier"}
circuit-common = { path = "crates/circuit_common" }
circuit-prover = { path = "crates/circuit_prover"}
circuit-serialize = { path = "crates/circuit_serialize" }
circuits-stark-verifier = { path = "crates/stark_verifier"}
circuits-stark-verifier-examples = { path = "crates/stark_verifier_examples"}

# Compile the circuit-prover and stwo crates with optimization level 3 to speed up the blake related tests.
[profile.test.package.circuit-prover]
opt-level = 3
[profile.test.package.stwo]
opt-level = 3
