[workspace]
members = [
    "crates/cairo_verifier",
    "crates/circuits",
    "crates/circuit_verifier",
    "crates/circuit_cairo_serialize",
    "crates/circuit_common",
    "crates/circuit_multiverifier",
    "crates/circuit_serialize",
    "crates/circuit_prover",
    "crates/stark_verifier",
    "crates/stark_verifier_examples",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/starkware-libs/stwo-circuits"
homepage = "https://github.com/starkware-libs/stwo-circuits"

[workspace.dependencies]
blake2 = { version = "0.10.6", default-features = false }
hashbrown = "0.17.1"
indexmap = { version = "2.10.0", default-features = false, features = ["std"] }
indoc = "2.0.6"
itertools = { version = "0.12", default-features = false, features = [
    "use_alloc",
] }
num-traits = { version = "0.2.19", default-features = false }
rstest = "0.26.1"
expect-test = "1.5.1"
rayon = "1.10.0"
rand_chacha = "0.3"
rand_core = "0.6"
serde = "1.0.219"
serde_json = "1.0"

# stwo
stwo = { git = "https://github.com/starkware-libs/stwo", rev = "74951f79", features = [
    "parallel",
], default-features = false }
stwo-constraint-framework = { git = "https://github.com/starkware-libs/stwo", rev = "74951f79", features = [
    "parallel",
] }
stwo-air-utils-derive = { git = "https://github.com/starkware-libs/stwo", rev = "74951f79" }
stwo-air-utils = { git = "https://github.com/starkware-libs/stwo", rev = "74951f79" }

# stwo-cairo
cairo-air = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "a837f0eaa40db776f39f2677885d7059ced867ba" }
stwo_cairo_prover = { package = "stwo-cairo-prover", git = "https://github.com/starkware-libs/stwo-cairo", rev = "a837f0eaa40db776f39f2677885d7059ced867ba" }
stwo_cairo_common = { package = "stwo-cairo-common", git = "https://github.com/starkware-libs/stwo-cairo", rev = "a837f0eaa40db776f39f2677885d7059ced867ba" }
stwo_cairo_dev_utils = { package = "stwo-cairo-dev-utils", git = "https://github.com/starkware-libs/stwo-cairo", rev = "a837f0eaa40db776f39f2677885d7059ced867ba" }
stwo_cairo_utils = { package = "stwo-cairo-utils", git = "https://github.com/starkware-libs/stwo-cairo", rev = "a837f0eaa40db776f39f2677885d7059ced867ba" }
stwo-cairo-serialize = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "a837f0eaa40db776f39f2677885d7059ced867ba" }
starknet-ff = "0.3"

# local crates
circuits = { path = "crates/circuits", version = "~1.0.0" }
circuit-verifier = { path = "crates/circuit_verifier", version = "~1.0.0" }
circuit-common = { path = "crates/circuit_common", version = "~1.0.0" }
circuit-multiverifier = { path = "crates/circuit_multiverifier", version = "~1.0.0" }
circuit-prover = { path = "crates/circuit_prover", version = "~1.0.0" }
circuit-cairo-verifier = { path = "crates/cairo_verifier", version = "~1.0.0" }
circuit-serialize = { path = "crates/circuit_serialize", version = "~1.0.0" }
circuits-stark-verifier = { path = "crates/stark_verifier", version = "~1.0.0" }
circuits-stark-verifier-examples = { path = "crates/stark_verifier_examples", version = "~1.0.0" }

# Compile the circuit-prover and stwo crates with optimization level 3 to speed up the blake related tests.
[profile.test.package.circuit-prover]
opt-level = 3
[profile.test.package.stwo]
opt-level = 3
