[workspace]
members = [
    "crates/cairo_verifier",
    "crates/circuits",
    "crates/circuit_verifier",
    "crates/circuit_cairo_serialize",
    "crates/circuit_common",
    "crates/circuit_multiverifier",
    "crates/circuit_serialize",
    "crates/circuit_prover",
    "crates/stark_verifier",
    "crates/stark_verifier_examples",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/starkware-libs/stwo-circuits"
homepage = "https://github.com/starkware-libs/stwo-circuits"

[workspace.dependencies]
blake2 = { version = "0.10.6", default-features = false }
hashbrown = ">=0.15.2"
indexmap = { version = "2.10.0", default-features = false, features = ["std"] }
indoc = "2.0.6"
itertools = { version = "0.12", default-features = false, features = [
    "use_alloc",
] }
num-traits = { version = "0.2.19", default-features = false }
rstest = "0.26.1"
expect-test = "1.5.1"
rayon = "1.10.0"
rand_chacha = "0.3"
rand_core = "0.6"
serde = "1.0.219"
serde_json = "1.0"

# stwo
stwo = { version = "2.3.0", features = [
    "parallel",
], default-features = false }
stwo-constraint-framework = { version = "2.3.0", features = [
    "parallel",
] }
stwo-air-utils-derive = { version = "2.3.0" }
stwo-air-utils = { version = "2.3.0" }

# stwo-cairo
cairo-air = { version = "1.3.0" }
stwo_cairo_prover = { package = "stwo-cairo-prover", version = "1.3.0" }
stwo_cairo_common = { package = "stwo-cairo-common", version = "1.3.0" }
stwo_cairo_dev_utils = { package = "stwo-cairo-dev-utils", version = "1.3.0" }
stwo_cairo_utils = { package = "stwo-cairo-utils", version = "1.3.0" }
stwo-cairo-serialize = { version = "1.3.0" }
starknet-ff = "0.3"

# local crates
circuits = { path = "crates/circuits", version = "~1.0.0", package = "stwo-circuits-core" }
circuit-verifier = { path = "crates/circuit_verifier", version = "~1.0.0", package = "stwo-circuit-verifier" }
circuit-common = { path = "crates/circuit_common", version = "~1.0.0", package = "stwo-circuit-common" }
circuit-multiverifier = { path = "crates/circuit_multiverifier", version = "~1.0.0", package = "stwo-circuit-multiverifier" }
circuit-prover = { path = "crates/circuit_prover", version = "~1.0.0", package = "stwo-circuit-prover" }
circuit-cairo-verifier = { path = "crates/cairo_verifier", version = "~1.0.0", package = "stwo-circuit-cairo-verifier" }
circuit-serialize = { path = "crates/circuit_serialize", version = "~1.0.0", package = "stwo-circuit-serialize" }
circuits-stark-verifier = { path = "crates/stark_verifier", version = "~1.0.0", package = "stwo-circuits-stark-verifier" }
# Not published (publish = false); only a dev-dependency, so no version: keeps it
# out of published manifests and off the registry resolution path.
circuits-stark-verifier-examples = { path = "crates/stark_verifier_examples", package = "stwo-circuits-stark-verifier-examples" }

# Compile the circuit-prover and stwo crates with optimization level 3 to speed up the blake related tests.
[profile.test.package.stwo-circuit-prover]
opt-level = 3
[profile.test.package.stwo]
opt-level = 3
