[package]
name = "circuit-cairo-air"
version.workspace = true
edition.workspace = true

[dependencies]
blake2.workspace = true
hashbrown.workspace = true
indexmap.workspace = true
itertools.workspace = true
num-traits.workspace = true
stwo.workspace = true
stwo-constraint-framework.workspace = true
stwo-air-utils-derive.workspace = true
cairo-air.workspace = true
rayon.workspace = true
circuits.workspace = true
circuits-stark-verifier.workspace = true

[dev-dependencies]
indoc.workspace = true
rstest.workspace = true
expect-test.workspace = true
stwo_cairo_prover.workspace = true
stwo_cairo_dev_utils.workspace = true
stwo_cairo_utils.workspace = true
