[package]
name = "circuit-cairo-air"
version.workspace = true
edition.workspace = true

[dependencies]
indexmap.workspace = true
itertools.workspace = true
num-traits.workspace = true
stwo.workspace = true
stwo-constraint-framework.workspace = true
cairo-air.workspace = true
stwo_cairo_common.workspace = true
circuits.workspace = true
circuit-common.workspace = true
circuits-stark-verifier.workspace = true
serde_json.workspace = true
circuit-air.workspace = true
circuit-prover.workspace = true

[dev-dependencies]
stwo_cairo_prover.workspace = true
stwo_cairo_dev_utils.workspace = true
stwo_cairo_utils.workspace = true
