[package]
name = "circuit-air"
version.workspace = true
edition.workspace = true

[dependencies]
itertools.workspace = true
num-traits.workspace = true
stwo.workspace = true
stwo-constraint-framework.workspace = true
serde.workspace = true
stwo_cairo_common.workspace = true
circuits.workspace = true
circuits-stark-verifier.workspace = true

[dev-dependencies]
indoc.workspace = true
rstest.workspace = true
expect-test.workspace = true
