[package]
name = "circuit-cairo-serialize"
version.workspace = true
edition.workspace = true
description = "Serializes circuit prover output into the Cairo verifier's input format."

[dependencies]
cairo-air.workspace = true
circuit-verifier.workspace = true
starknet-ff.workspace = true
stwo.workspace = true
stwo-cairo-serialize.workspace = true

[dev-dependencies]
circuit-common.workspace = true
circuit-prover.workspace = true
circuits.workspace = true
num-traits.workspace = true
