[package]
name = "circuit-cairo-serialize"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Serializes circuit proofs into the Cairo verifier's input format."
keywords = ["stark", "cairo", "serialization", "zk", "cryptography"]
categories = ["cryptography", "encoding"]

[dependencies]
cairo-air.workspace = true
circuit-verifier.workspace = true
starknet-ff.workspace = true
stwo.workspace = true
stwo-cairo-serialize.workspace = true

[dev-dependencies]
circuit-common.workspace = true
circuit-prover.workspace = true
circuits.workspace = true
itertools.workspace = true
num-traits.workspace = true
