[package]
name = "circuit-common"
version.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = []
serde = ["dep:serde", "indexmap/serde"]
prover = ["stwo/parallel", "stwo/prover", "stwo-constraint-framework/parallel", "stwo-constraint-framework/prover"]

[dependencies]
indexmap.workspace = true
itertools.workspace = true
rand_chacha.workspace = true
stwo.workspace = true
stwo-constraint-framework.workspace = true
stwo_cairo_common.workspace = true
circuits.workspace = true
hashbrown.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
expect-test.workspace = true
