[package]
name = "stwo-circuit-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared circuit types, parameters, finalization, and preprocessing for the stwo-circuits prover and verifier."

[lib]
name = "circuit_common"

[features]
prover = ["stwo/parallel", "stwo/prover", "stwo-constraint-framework/parallel", "stwo-constraint-framework/prover"]

[dependencies]
itertools.workspace = true
rand_chacha.workspace = true

stwo.workspace = true
stwo-constraint-framework.workspace = true
stwo_cairo_common.workspace = true

circuits.workspace = true
circuits-stark-verifier.workspace = true

[dev-dependencies]
expect-test.workspace = true
