[package]
name = "circuit-multiverifier"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Aggregated verification of multiple circuit STARK proofs in the stwo-circuits stack."
keywords = ["stark", "circuit", "verifier", "zk", "cryptography"]
categories = ["cryptography", "mathematics"]

[dependencies]
itertools.workspace = true
stwo.workspace = true
stwo-constraint-framework.workspace = true
circuits.workspace = true
circuits-stark-verifier.workspace = true
circuit-verifier.workspace = true
circuit-common.workspace = true
