[package]
name = "circuit-prover"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Circuit STARK proof generation: witness and interaction trace generation and FRI proving."
keywords = ["stark", "prover", "circuit", "zk", "cryptography"]
categories = ["cryptography", "mathematics"]

[dependencies]
itertools.workspace = true
num-traits.workspace = true
stwo = { workspace = true, features = ["prover"] }
stwo-constraint-framework = { workspace = true, features = ["prover"] }
stwo-air-utils-derive.workspace = true
stwo-air-utils.workspace = true
serde.workspace = true
rayon.workspace = true
stwo_cairo_prover.workspace = true
stwo_cairo_common = { workspace = true, features = ["prover"] }
circuits.workspace = true
circuit-verifier.workspace = true
circuit-common = { workspace = true, features = ["prover"] }
circuits-stark-verifier.workspace = true
rand = "0.8.5"

[dev-dependencies]
expect-test.workspace = true
