[package]
name = "circuit-serialize"
version.workspace = true
edition.workspace = true

[dependencies]
num-traits.workspace = true
stwo.workspace = true
circuits.workspace = true
circuits-stark-verifier.workspace = true

[dev-dependencies]
indoc.workspace = true
rstest.workspace = true
expect-test.workspace = true
circuits-stark-verifier-examples.workspace = true
