[package]
name = "stwo-circuit-serialize"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Serialization and deserialization of circuit STARK proofs for the stwo-circuits stack."

[lib]
name = "circuit_serialize"

[dependencies]
stwo.workspace = true
circuits.workspace = true
circuits-stark-verifier.workspace = true

[dev-dependencies]
indoc.workspace = true
rstest.workspace = true
expect-test.workspace = true
circuits-stark-verifier-examples.workspace = true
