[package]
name = "stwo-circuit-verifier"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Circuit constraint definitions and component evaluators for verifying circuit STARK proofs."
keywords = ["stark", "circuit", "verifier", "zk", "cryptography"]
categories = ["cryptography", "mathematics"]

[lib]
name = "circuit_verifier"

[dependencies]
indexmap.workspace = true
itertools.workspace = true
num-traits.workspace = true

stwo.workspace = true
stwo-constraint-framework.workspace = true
circuits.workspace = true
circuits-stark-verifier.workspace = true
circuit-common.workspace = true

[dev-dependencies]
indoc.workspace = true
rstest.workspace = true
expect-test.workspace = true
