[package]
name = "circuits"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Circuit DSL for building arithmetic constraint circuits (gates, variables, context) over the Mersenne31 field."
keywords = ["stark", "circuit", "zk", "cryptography"]
categories = ["cryptography", "mathematics"]

[dependencies]
blake2.workspace = true
hashbrown.workspace = true
indexmap.workspace = true
itertools.workspace = true
num-traits.workspace = true
stwo.workspace = true
stwo_cairo_common.workspace = true

[dev-dependencies]
indoc.workspace = true
rstest.workspace = true
expect-test.workspace = true
