[package]
name = "circuits-stark-verifier"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Standalone Circle STARK proof verifier (FRI, out-of-domain sampling, Blake2s Merkle authentication)."
keywords = ["stark", "verifier", "fri", "zk", "cryptography"]
categories = ["cryptography", "mathematics"]

[dependencies]
indexmap = { workspace = true, features = ["serde"] }
hashbrown.workspace = true
itertools.workspace = true
num-traits.workspace = true
serde.workspace = true

stwo.workspace = true
stwo-constraint-framework.workspace = true
circuits.workspace = true

[dev-dependencies]
indoc.workspace = true
rstest.workspace = true
expect-test.workspace = true
