[package]
name = "circuits-stark-verifier-examples"
version.workspace = true
edition.workspace = true

[dependencies]
circuits.workspace = true
circuits-stark-verifier.workspace = true
itertools.workspace = true
num-traits.workspace = true
stwo = { workspace = true, features = ["prover"] }
stwo-constraint-framework = { workspace = true, features = ["prover"] }

[dev-dependencies]
rstest.workspace = true
