[package]
name = "circuits-stark-verifier-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Example verifiers and test utilities for the stwo-circuits STARK verifier (not published)."
publish = false

[dependencies]
circuits.workspace = true
circuits-stark-verifier.workspace = true
indexmap.workspace = true
itertools.workspace = true
num-traits.workspace = true
stwo = { workspace = true, features = ["prover"] }
stwo-constraint-framework = { workspace = true, features = ["prover"] }

[dev-dependencies]
circuit-serialize = { path = "../circuit_serialize" }
circuits = { workspace = true, features = ["test-utils"] }
rstest.workspace = true
