[package]
name = "stwo-circuits"
version.workspace = true
edition.workspace = true

[dependencies]
blake2.workspace = true
indexmap.workspace = true
itertools.workspace = true
num-traits.workspace = true
stwo.workspace = true

[dev-dependencies]
indoc.workspace = true
rstest.workspace = true
stwo-constraint-framework.workspace = true
expect-test.workspace = true
